--- a/ttt.css
+++ b/ttt.css
@@ -7,6 +7,12 @@ h1,h2{
     color:rgb(123, 0, 255);
     margin-bottom:-5px;
 }
+button{
+    color:rgb(123,0,255);
+    font-size:larger;
+    border-radius: 2px;
+    background-color:rgb(226, 239, 240);
+}
 .ttt{
     display:flex;
     flex-direction:column;
